--- a/i18n/fr/docusaurus-plugin-content-docs/current/02.install/index.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/02.install/index.mdx
@@ -1,49 +1,5 @@
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
 import Link from '@docusaurus/Link';
-<<<<<<< HEAD
-=======
 
-<<<<<<< HEAD
-# Choose your selfhosting method and providers
->>>>>>> c14265a6 (update some templates from en)
-
-Vous pouvez vous auto-héberger à la maison (sur un petit ordinateur), ou sur un serveur distant. Chaque solution a ses avantages et inconvénients :
-
-### À la maison, par exemple sur une carte ARM ou un ancien ordinateur
-
-Vous pouvez vous héberger chez vous, sur une carte ARM ou un vieil ordinateur, connecté à votre box internet.
-
-- **Avantages** : vous aurez un contrôle physique sur la machine et avez seulement besoin d'acheter le matériel initial ;
-- **Inconvénients** : il vous faudra [configurer manuellement votre box internet](/install/post_install/isp_box_config) et serez possiblement [limité par certains aspects de votre fournisseur d'accès à Internet](/install/providers/isp/).
-
-### À la maison, derrière un VPN
-
-Un VPN est un tunnel chiffré entre deux machines. En pratique, cela permet de faire « comme si » une machine était connectée depuis ailleurs. Ceci permet de s'auto-héberger à la maison tout en contournant les limitations du fournisseur d'accès à Internet. Voir aussi [le projet Brique Internet](https://labriqueinter.net/) et [la FFDN](https://www.ffdn.org/).
-
-<<<<<<< HEAD
-- **Avantages** : vous aurez un contrôle physique sur la machine, et le VPN permettra de cacher votre trafic vis-à-vis de votre FAI ainsi que de contourner ses limitations ;
-- **Inconvénients** : il vous faudra payer des frais mensuels pour le VPN.
-=======
-- **Pros**: you will have physical control of the machine, and the VPN hides your traffic from your ISP and allows you to bypass its limitations;
-- **Cons**: you will have to pay a monthly subscription for the VPN.
->>>>>>> c14265a6 (update some templates from en)
-
-### Sur un serveur distant (VPS ou serveur dédié)
-
-Vous pouvez louer un serveur privé virtuel ou une machine dédiée à des hébergeurs [associatifs](https://db.ffdn.org/) ou [commerciaux](/install/providers/servers).
-
-<<<<<<< HEAD
-- **Avantages** : votre serveur sera rapide et la connectivité internet sera bonne ;
-- **Inconvénients** : il vous faudra payer des frais mensuels pour la machine, et vous n'aurez pas de contrôle physique dessus.
-=======
-- **Pros**: your server and its internet connectivity will be fast;
-- **Cons**: you will have to pay a monthly subscription and won't have physical control of your server.
->>>>>>> c14265a6 (update some templates from en)
-
-=======
 Vous pouvez vous auto-héberger à la maison (sur un petit ordinateur), ou sur un serveur distant. Chaque solution a ses avantages et inconvénients :
 
 ### À la maison, par exemple sur une carte ARM ou un ancien ordinateur
@@ -62,62 +18,12 @@ Un VPN est un tunnel chiffré entre deux machines. En pratique, cela permet de f
 
 ### Sur un serveur distant (VPS ou serveur dédié)
 
-Vous pouvez louer un serveur privé virtuel ou une machine dédiée à des hébergeurs [associatifs](https://db.ffdn.org/) ou [commerciaux](/install/providers/servers).
+Vous pouvez louer un serveur privé virtuel ou une machine dédiée à des hébergeurs [associatifs](https://db.ffdn.org/) ou [commerciaux](/providers/server).
 
 - **Avantages** : votre serveur sera rapide et la connectivité internet sera bonne ;
 - **Inconvénients** : il vous faudra payer des frais mensuels pour la machine, et vous n'aurez pas de contrôle physique dessus.
 
->>>>>>> e7cda185 (rebase)
 ### Résumé
-=======
-=======
-import Link from '@docusaurus/Link';
-
->>>>>>> 40dccb1e (update some templates from en)
-# Choose your selfhosting method and providers
-=======
----
-title: "Installation"
-sidebar_position: 0
----
-
-=======
->>>>>>> 69dd6de9 (reuse translations: providers)
-import Link from '@docusaurus/Link';
-
-Vous pouvez vous auto-héberger à la maison (sur un petit ordinateur), ou sur un serveur distant. Chaque solution a ses avantages et inconvénients :
->>>>>>> 6f9f915b (translations : more)
-
-### À la maison, par exemple sur une carte ARM ou un ancien ordinateur
-
-Vous pouvez vous héberger chez vous, sur une carte ARM ou un vieil ordinateur, connecté à votre box internet.
-
-- **Avantages** : vous aurez un contrôle physique sur la machine et avez seulement besoin d'acheter le matériel initial ;
-- **Inconvénients** : il vous faudra [configurer manuellement votre box internet](/install/post_install/isp_box_config) et serez possiblement [limité par certains aspects de votre fournisseur d'accès à Internet](/install/providers/isp/).
-
-### À la maison, derrière un VPN
-
-Un VPN est un tunnel chiffré entre deux machines. En pratique, cela permet de faire « comme si » une machine était connectée depuis ailleurs. Ceci permet de s'auto-héberger à la maison tout en contournant les limitations du fournisseur d'accès à Internet. Voir aussi [le projet Brique Internet](https://labriqueinter.net/) et [la FFDN](https://www.ffdn.org/).
-
-- **Avantages** : vous aurez un contrôle physique sur la machine, et le VPN permettra de cacher votre trafic vis-à-vis de votre FAI ainsi que de contourner ses limitations ;
-- **Inconvénients** : il vous faudra payer des frais mensuels pour le VPN.
-
-### Sur un serveur distant (VPS ou serveur dédié)
-
-Vous pouvez louer un serveur privé virtuel ou une machine dédiée à des hébergeurs [associatifs](https://db.ffdn.org/) ou [commerciaux](/install/providers/servers).
-
-- **Avantages** : votre serveur sera rapide et la connectivité internet sera bonne ;
-- **Inconvénients** : il vous faudra payer des frais mensuels pour la machine, et vous n'aurez pas de contrôle physique dessus.
-
-<<<<<<< HEAD
-- **Pros**: your server and its internet connectivity will be fast;
-- **Cons**: you will have to pay a monthly subscription and won't have physical control of your server.
-
-## Summary
->>>>>>> 0f286959 (init translations)
-=======
-### Résumé
->>>>>>> 6f9f915b (translations : more)
 
 export const styleNone = {
   textAlign: 'center',
@@ -139,80 +45,16 @@ export const styleDanger = {
   <thead>
     <tr>
       <th></th>
-<<<<<<< HEAD
-<<<<<<< HEAD
       <th style={styleNone}>À la maison<br/><small>(ex. carte ARM, vieil ordinateur)</small></th>
       <th style={styleNone}>À la maison<br/>derrière un VPN</th>
       <th style={styleNone}>Sur un serveur distant<br/>(VPS ou dédié)</th>
-=======
-      <th style={styleNone}>At home<br/><small>(e.g. ARM board, old computer)</small></th>
-      <th style={styleNone}>At home<br/>behind a VPN</th>
-      <th style={styleNone}>On a remote server<br/>(VPS or dedicated)</th>
->>>>>>> 0f286959 (init translations)
-=======
-      <th style={styleNone}>À la maison<br/><small>(ex. carte ARM, vieil ordinateur)</small></th>
-      <th style={styleNone}>À la maison<br/>derrière un VPN</th>
-      <th style={styleNone}>Sur un serveur distant<br/>(VPS ou dédié)</th>
->>>>>>> 6f9f915b (translations : more)
     </tr>
   </thead>
   <tbody>
     <tr>
-<<<<<<< HEAD
-<<<<<<< HEAD
       <td style={styleNone}>Coûts matériels</td>
       <td style={styleMeh} colspan="2">Environ 50€<br/><small>(ex. un Raspberry Pi)</small></td>
       <td style={styleGood}>Non</td>
-    </tr>
-    <tr>
-      <td style={styleNone}>Coûts mensuels</td>
-      <td style={styleGood}>Négligeables<br/><small>(électricité)</small></td>
-      <td style={styleMeh}>Environ 5€<br/><small>(VPN)</small></td>
-      <td style={styleMeh}>À partir de ~3€<br/><small>(VPS)</small></td>
-    </tr>
-    <tr>
-      <td style={styleNone}>Contrôle physique de la machine</td>
-      <td style={styleGood}>Oui</td>
-      <td style={styleGood}>Oui</td>
-      <td style={styleDanger}>Non</td>
-    </tr>
-    <tr>
-      <td style={styleNone}>Routage manuel de ports requis</td>
-      <td style={styleMeh}>Oui</td>
-      <td style={styleGood}>Non</td>
-      <td style={styleGood}>Non</td>
-    </tr>
-    <tr>
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
->>>>>>> e7cda185 (rebase)
-      <td style={styleNone}>Limitations FAI possibles</td>
-      <td style={styleDanger}>Oui<br/><small>(Voyez <Link to="./providers/isp">ici</Link>)</small></td>
-      <td style={styleGood}>Contournées par VPN</td>
-      <td style={styleGood}>En général non</td>
-<<<<<<< HEAD
-=======
-      <td style={styleNone}>Possible ISP limitations</td>
-      <td style={styleDanger}>Yes<br/><small>(see <Link to="./providers/isps">here</Link>)</small></td>
-      <td style={styleGood}>Bypassed by VPN</td>
-      <td style={styleGood}>Typically no</td>
->>>>>>> c14265a6 (update some templates from en)
-=======
->>>>>>> e7cda185 (rebase)
-    </tr>
-    <tr>
-      <td style={styleNone}>CPU</td>
-      <td style={styleMeh} colspan="2">En général ~1 GHz</td>
-=======
-      <td style={styleNone}>Hardware cost</td>
-      <td style={styleMeh} colspan="2">About 50€<br/><small>(e.g. a Raspberry Pi)</small></td>
-      <td style={styleGood}>None</td>
-=======
-      <td style={styleNone}>Coûts matériels</td>
-      <td style={styleMeh} colspan="2">Environ 50€<br/><small>(ex. un Raspberry Pi)</small></td>
-      <td style={styleGood}>Non</td>
->>>>>>> 6f9f915b (translations : more)
     </tr>
     <tr>
       <td style={styleNone}>Coûts mensuels</td>
@@ -240,18 +82,11 @@ export const styleDanger = {
     </tr>
     <tr>
       <td style={styleNone}>CPU</td>
-<<<<<<< HEAD
-      <td style={styleMeh} colspan="2">Typically ~1 GHz</td>
->>>>>>> 0f286959 (init translations)
-=======
       <td style={styleMeh} colspan="2">En général ~1 GHz</td>
->>>>>>> 6f9f915b (translations : more)
       <td style={styleGood}>~2 GHz<br/><small>(Digital Ocean droplet)</small></td>
     </tr>
     <tr>
       <td style={styleNone}>RAM</td>
-<<<<<<< HEAD
-<<<<<<< HEAD
       <td style={styleMeh} colspan="2">En général 500 Mb or 1 Gb</td>
       <td style={styleMeh}>Coûts liés au serveur</td>
     </tr>
@@ -259,24 +94,7 @@ export const styleDanger = {
       <td style={styleNone}>Connexion internet</td>
       <td style={styleMeh} colspan="2">Dépend de la connexion chez soi</td>
       <td style={styleGood}>Généralement bonne</td>
-=======
-      <td style={styleMeh} colspan="2">Typically 500 Mb or 1 Gb</td>
-      <td style={styleMeh}>Related to server cost</td>
-    </tr>
-    <tr>
-      <td style={styleNone}>Internet connectivity</td>
-      <td style={styleMeh} colspan="2">Depends on home connectivity</td>
-      <td style={styleGood}>Typically pretty good</td>
->>>>>>> 0f286959 (init translations)
-=======
-      <td style={styleMeh} colspan="2">En général 500 Mb or 1 Gb</td>
-      <td style={styleMeh}>Coûts liés au serveur</td>
-    </tr>
-    <tr>
-      <td style={styleNone}>Connexion internet</td>
-      <td style={styleMeh} colspan="2">Dépend de la connexion chez soi</td>
-      <td style={styleGood}>Généralement bonne</td>
->>>>>>> 6f9f915b (translations : more)
     </tr>
   </tbody>
 </table>
+
