--- a/docs/admin/05.get_started/20.install_on/_configuration.mdx
+++ b/docs/admin/05.get_started/20.install_on/_configuration.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 ## <FAIcon icon="fa-cog"/> Proceed with the initial configuration
 
 :::tip
-If you are in the process of restoring a server using a YunoHost backup, you should skip this step and instead [restore the backup instead of the postinstall step](/admin/backups/#restoring-backups).
+If you are in the process of restoring a server using a YunoHost backup, you should skip this step and instead [restore the backup instead of the postinstall step](/admin/backups#restoring-backups).
 :::
 
 :::note
